--- a/Lab1 - Introduction to Classes.vcxproj
+++ b/Lab1 - Introduction to Classes.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Task3.cpp" />
     <ClCompile Include="Task4.cpp" />
     <ClCompile Include="Task5.cpp" />
+    <ClCompile Include="Task6.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
