--- a/Lab1 - Introduction to Classes.vcxproj.filters
+++ b/Lab1 - Introduction to Classes.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="FileName.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Task6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
